fix button and h1 alignment

--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,7 @@ h1 {
     font-size: 16px;
     font-weight: 800;
     line-height: 24px;
-    margin-bottom: 4px;
-}
-
-.text-muted {
-    color: var(--text-muted);
+    padding: 6px 10px 6px 0;
 }
 
 h2 {
@@ -91,6 +87,47 @@ h2 {
     font-weight: 800;
     line-height: 24px;
     margin-bottom: 40px;
+}
+
+.text-muted {
+    color: var(--text-muted);
+}
+
+p {
+    color: var(--text-muted);
+    
+}
+
+a {
+    color: var(--text);
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
+.animated-link {
+    position: relative;
+}
+
+.animated-link:after {
+    content: "";
+    position: absolute;
+    background: white;
+    height: 0.5px;
+    width: 100%;
+    left: 0;
+    bottom: -2px;
+}
+
+.animated-link:hover {
+    text-decoration: none;
+}
+
+.animated-link:hover:after {
+    animation: refill 0.4s ease;
 }
 
 section {
@@ -130,20 +167,6 @@ section {
     margin-top: 16px;
 }
 
-p {
-    color: var(--text-muted);
-    
-}
-
-a {
-    color: var(--text);
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
 .with-arrow::after {
     content: "";
     display: inline-block;
@@ -162,27 +185,7 @@ a:hover {
     transform: translate(2px, -2px);
 }
 
-.animated-link {
-    position: relative;
-}
 
-.animated-link:after {
-    content: "";
-    position: absolute;
-    background: white;
-    height: 0.5px;
-    width: 100%;
-    left: 0;
-    bottom: -2px;
-}
-
-.animated-link:hover {
-    text-decoration: none;
-}
-
-.animated-link:hover:after {
-    animation: refill 0.4s ease;
-}
 
 
 @keyframes refill {
